syntax = "proto3";

package org.jj;

import "google/protobuf/wrappers.proto";

enum BuySell {
    BUY = 0;
    SELL = 1;
}

enum Expiry {
    GTC = 0;
    IOC = 1;
    FOK = 2;
}

service OrderService {
    rpc OrderCreateRequest(OrderCreateRequestDetails) returns (google.protobuf.Int32Value) {}
    rpc OrderCancelRequest(google.protobuf.Int32Value) returns (google.protobuf.BoolValue) {}
    rpc OrderStatusRequest(google.protobuf.Int32Value) returns (Order) {}
    rpc GetTradingProductsRequest(EmptyQuery) returns (TradingProductsList) {}
    rpc OrderBookSubscriptionService(google.protobuf.StringValue) returns (stream OrderBook) {}
    rpc GetOrdersRequest(OrderIdList) returns (OrderList) {}
}

message OrderIdList {
    repeated int32 id = 1;
}

message OrderList {
    repeated Order orders = 1;
}

message Order {
    int32 id = 1;
    string product_symbol = 2;
    double price = 3;
    int64 quantity = 4;
    int64 quantity_filled = 5;
    Expiry expiry = 6;
    BuySell buySell = 7;
}

message EmptyQuery {}

message OrderCreateRequestDetails {
    string product_symbol = 1;
    BuySell buy_sell = 2;
    int64 quantity = 3;
    double price = 4;
    Expiry expiry = 5;
}

message TradingProductsList {
    repeated string symbols = 1;
}

message OrderBook {
    repeated double buy_prices = 1;
    repeated int64 buy_quantities = 2;
    repeated double sell_prices = 3;
    repeated int64 sell_quantities = 4;
}
